# lgrb-app-service

./: .env.example  Cargo.toml  Dockerfile  build.rs  compose.override.yml  compose.yml
.github/workflows/: build.yml  prod.yml  testing.yml
http/: hc.http
src/: grpc_client.rs  main.rs  verify_captcha.rs
templates/: index.html
