[package]
name = "app-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
tower-http = { version = "0.5.0", features = ["fs"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
askama = "0.12.1"
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"

[build-dependencies]
tonic-prost-build = "0.14"
